@@ -19,12 +19,12 @@
  */
 package org.sonar.server.ui.ws;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import javax.annotation.Nullable;
 import org.sonar.api.Startable;
 import org.sonar.api.config.Configuration;
 import org.sonar.api.platform.Server;
@@ -35,7 +35,6 @@ import org.sonar.api.server.ws.Response;
 import org.sonar.api.server.ws.WebService.NewController;
 import org.sonar.api.utils.text.JsonWriter;
 import org.sonar.api.web.page.Page;
-import org.sonar.core.platform.EditionProvider;
 import org.sonar.core.platform.PlatformEditionProvider;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
@@ -56,17 +55,14 @@ import static org.sonar.core.config.WebConstants.SONAR_LF_ENABLE_GRAVATAR;
 import static org.sonar.core.config.WebConstants.SONAR_LF_GRAVATAR_SERVER_URL;
 import static org.sonar.core.config.WebConstants.SONAR_LF_LOGO_URL;
 import static org.sonar.core.config.WebConstants.SONAR_LF_LOGO_WIDTH_PX;
+import static org.sonar.core.platform.EditionProvider.Edition;
 import static org.sonar.core.platform.EditionProvider.Edition.DATACENTER;
 import static org.sonar.core.platform.EditionProvider.Edition.ENTERPRISE;
-import static org.sonar.process.ProcessProperties.Property.SONARCLOUD_ENABLED;
-import static org.sonar.process.ProcessProperties.Property.SONARCLOUD_HOMEPAGE_URL;
-import static org.sonar.process.ProcessProperties.Property.SONAR_ANALYTICS_GTM_TRACKING_ID;
-import static org.sonar.process.ProcessProperties.Property.SONAR_PRISMIC_ACCESS_TOKEN;
 import static org.sonar.process.ProcessProperties.Property.SONAR_UPDATECENTER_ACTIVATE;
 
 public class GlobalAction implements NavigationWsAction, Startable {
 
-  private static final Set<String> DYNAMIC_SETTING_KEYS = ImmutableSet.of(
+  private static final Set<String> DYNAMIC_SETTING_KEYS = Set.of(
     SONAR_LF_LOGO_URL,
     SONAR_LF_LOGO_WIDTH_PX,
     SONAR_LF_ENABLE_GRAVATAR,
@@ -74,6 +70,8 @@ public class GlobalAction implements NavigationWsAction, Startable {
     RATING_GRID,
     DEVELOPER_AGGREGATED_INFO_DISABLED);
 
+  private static final String REGULATORY_REPORT_FEATURE_ENABLED_FLAG  = "regulatoryReportFeatureEnabled";
+  
   private final Map<String, String> systemSettingValuesByKey;
 
   private final PageRepository pageRepository;
@@ -113,12 +111,6 @@ public class GlobalAction implements NavigationWsAction, Startable {
   @Override
   public void start() {
     this.systemSettingValuesByKey.put(SONAR_UPDATECENTER_ACTIVATE.getKey(), config.get(SONAR_UPDATECENTER_ACTIVATE.getKey()).orElse(null));
-    boolean isOnSonarCloud = config.getBoolean(SONARCLOUD_ENABLED.getKey()).orElse(false);
-    if (isOnSonarCloud) {
-      this.systemSettingValuesByKey.put(SONAR_PRISMIC_ACCESS_TOKEN.getKey(), config.get(SONAR_PRISMIC_ACCESS_TOKEN.getKey()).orElse(null));
-      this.systemSettingValuesByKey.put(SONAR_ANALYTICS_GTM_TRACKING_ID.getKey(), config.get(SONAR_ANALYTICS_GTM_TRACKING_ID.getKey()).orElse(null));
-      this.systemSettingValuesByKey.put(SONARCLOUD_HOMEPAGE_URL.getKey(), config.get(SONARCLOUD_HOMEPAGE_URL.getKey()).orElse(null));
-    }
   }
 
   @Override
@@ -151,6 +143,7 @@ public class GlobalAction implements NavigationWsAction, Startable {
       writeInstanceUsesDefaultAdminCredentials(json);
       writeMultipleAlmEnabled(json);
       writeProjectImportFeature(json);
+      writeRegulatoryReportFeature(json);
       editionProvider.get().ifPresent(e -> json.prop("edition", e.name().toLowerCase(Locale.ENGLISH)));
       writeNeedIssueSync(json);
       json.prop("standalone", webServer.isStandalone());
@@ -218,8 +211,8 @@ public class GlobalAction implements NavigationWsAction, Startable {
   }
 
   private void writeProjectImportFeature(JsonWriter json) {
-    EditionProvider.Edition edition = editionProvider.get().orElse(null);
-    boolean isEnabled = Arrays.asList(ENTERPRISE, DATACENTER).contains(edition);
+    Edition edition = editionProvider.get().orElse(null);
+    boolean isEnabled = isEditionEEorDCE(edition);
     json.prop("projectImportFeatureEnabled", isEnabled);
   }
 
@@ -231,5 +224,15 @@ public class GlobalAction implements NavigationWsAction, Startable {
 
   private void writeWebAnalytics(JsonWriter json) {
     webAnalyticsLoader.getUrlPathToJs().ifPresent(p -> json.prop("webAnalyticsJsPath", p));
+  }
+
+  private void writeRegulatoryReportFeature(JsonWriter json) {
+    Edition edition = editionProvider.get().orElse(null);
+    boolean isEnabled = isEditionEEorDCE(edition);
+    json.prop(REGULATORY_REPORT_FEATURE_ENABLED_FLAG, isEnabled);
+  }
+
+  private static boolean isEditionEEorDCE(@Nullable Edition edition) {
+    return Arrays.asList(ENTERPRISE, DATACENTER).contains(edition);
   }
 }
